# context-store

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
context_store/: __init__.py  cli.py  models.py  store.py
context_store/backends/: __init__.py  base.py  memory.py  sqlite.py
context_store/embeddings/: __init__.py  base.py  hash.py  openai.py  sentence_transformers.py
examples/: basic_usage.py  chatbot_memory.py
tests/: test_store.py
