[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-store"
version = "0.1.0"
description = "Semantic memory store for LLM applications — store, search, and inject context into prompts"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bhupendra Tale", email = "bgurjar05.bg@gmail.com" }]
keywords = ["llm", "ai", "context", "memory", "vector-search", "embeddings", "rag", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.2"]
openai = ["openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
all = ["sentence-transformers>=2.2", "openai>=1.0"]

[project.urls]
Homepage = "https://github.com/bhupendra05/context-store"
Repository = "https://github.com/bhupendra05/context-store"
"Bug Tracker" = "https://github.com/bhupendra05/context-store/issues"

[project.scripts]
context-store = "context_store.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_store*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
